@@ -1,0 +1,7 @@
+# for KDE 4.1 we require at least version 0.20
+set(SHARED_MIME_INFO_MINIMUM_VERSION "0.20")
+find_package(SharedMimeInfo REQUIRED)
+
+########### install files ###############
+install(FILES synce-kde4-kio-rapip.xml DESTINATION ${XDG_MIME_INSTALL_DIR})
+update_xdg_mimetypes(${XDG_MIME_INSTALL_DIR})
